--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Logistics Company</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logística XYZ</title>
+    <!-- Enlace al archivo CSS de tu aplicación -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- Icono del sitio -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div id="root"></div>
+    <!-- Contenedor para la aplicación de React -->
+    <div id="root"></div>
+    <!-- Scripts de la aplicación de React -->
+    <script src="bundle.js"></script>
 </body>
 </html>
